@@ -1,11 +1,7 @@
 语言: 简体中文, English
 
 这个合集包含了我制作的和一部分其他mod的弹药。
-我做了点修改使其兼容BVTA
-
-[h1]
-已更新，不再依赖BVTA或BVTA RP，可以单独使用！
-[/h1]
+我做了点修改使其兼容Better Vanilla Turret Ammo(原版弹药加强)
 
 轨道炮
   - 贫化燃料炮弹 (Ammo Mod by Laryssa)
@@ -13,6 +9,7 @@
   - 尾翼稳定脱壳穿甲炮弹 (APFSDS Railgun Shells by Birb)
   - 酸雾炮弹
   - 爆破霰弹炮弹
+  - 诱饵弹
 
 连射炮
   - 爆破弹药箱 (EK Armory by Videogames)
@@ -38,16 +35,13 @@ Supported languages: English, 简体中文
 This is a collection of interesting ammunitions made by community modders. 
 I did some changes to make them compatible with Better Vanilla Turret Ammo. 
 
-[h1]
-Updated. Should no longer need BVTA or BVTA RP. Request for feedback.
-[/h1]
-
 Railgun
   - Depleted Fuel Railgun Shell (from Ammo Mod by Laryssa)
   - APHE Proximity Railgun Shell (from APHE Railgun Shells by Birb)
   - APFSDS Railgun Shell (from APFSDS Railgun Shells by Birb)
   - Acid Mist Railgun Shell
   - Explosive Canister Shell
+  - Decoy Railgun Shell
 
 Chaingun
   - Chaingun Explosive Ammunition Box (from EK Armory by Videogames)
